--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
 <h2 id="reporte-cobertura-markdown"><a href="Cobertura/SummaryGithub.html">Reporte Cobertura Markdown</a></h2>
 <h2 id="documentacion-de-clases-atributos-y-métodos"><a href="docs/Calculator.Domain.html">Documentacion de Clases, atributos y métodos</a></h2>
 <h2 id="diagrama-de-clases"><a href="clases.html">Diagrama de Clases</a></h2>
+<h2 id="reporte-bdd"><a href="ReporteBDD/index.html">Reporte BDD</a></h2>
 
 </article>
 
