deploy: 0cfbfeeeea0892f990b4e1194acfcc47505d10ea

--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
 <h1 id="this-is-the-homepage">This is the <strong>HOMEPAGE</strong>.</h1>
 
 <h2 id="reporte-cobertura-html"><a href="Cobertura/index.html">Reporte Cobertura HTML</a></h2>
-<h2 id="reporte-cobertura-markdown"><a href="Cobertura/SummaryGithub.html">Reporte Cobertura Markdown</a></h2>
-<h2 id="documentacion-de-clases-atributos-y-métodos"><a href="docs/Calculator.Domain.Calculator.html">Documentacion de Clases, atributos y métodos</a></h2>
+<h2 id="reporte-cobertura-markdown"><a href="Cobertura/SummaryGithub.md">Reporte Cobertura Markdown</a></h2>
+<h2 id="documentacion-de-clases-atributos-y-métodos"><a href="docs/Calculator.Domain.html">Documentacion de Clases, atributos y métodos</a></h2>
 <h2 id="diagrama-de-clases"><a href="clases.html">Diagrama de Clases</a></h2>
 <h2 id="reporte-bdd"><a href="ReporteBDD/index.html">Reporte BDD</a></h2>
 
